infer/tests/codetoanalyze/cpp/errors/attributes/deprecated_hack.cpp
../../frontend/attributes/deprecated_hack.cpp